--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "date-selector",
   "version": "1.0.0",
-  "description": "A simple date selection tool",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Aristhide Nobanza",
-  "license": "MIT",
-  "dependencies": {}
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.1"
+  }
 }
